--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -62,7 +62,7 @@
                     "bug": "1431381",
                     "description": "Partials generation broken with construct exception (due to missing package pins)",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 }
             ]
