firefox 58.0rc - cancelling release

--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -2,7 +2,7 @@
     "date": "2018-01-15",
     "inflight": [
         {
-            "aborted": false,
+            "aborted": true,
             "buildnum": 4,
             "graphids": [
                 "ZQ5x4-6dR7W5DBGSIryEYg"
