firefox 58.0rc - syncing wiki with current data

--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -4,9 +4,7 @@
         {
             "aborted": false,
             "buildnum": 6,
-            "graphids": [
-                "EP95aXu5SCqdudWWKY50EQ"
-            ],
+            "graphids": [],
             "human_tasks": [
                 {
                     "alias": "shipit",
