firefox 58.0rc - updated inflight issue.

--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -55,7 +55,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "ssh connection failed for a repack. reran JYZIwWyHS1mMaBEs0yv8Gw",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
+                }
+            ]
         },
         {
             "aborted": true,
