--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -4,7 +4,9 @@
         {
             "aborted": false,
             "buildnum": 6,
-            "graphids": [],
+            "graphids": [
+                "NTzcMXyoTdaaAXvCqJKPtQ"
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
