firefox 58.0rc - syncing wiki with current data

--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -123,7 +123,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1431381",
+                    "description": "Partials generation broken with construct exception (due to missing package pins) -- Release only due to funsize balrog docker being seperate",
+                    "future_threat": true,
+                    "resolved": true,
+                    "who": "callek"
+                }
+            ]
         },
         {
             "aborted": true,
