firefox 58.0rc - syncing wiki with current data

--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -57,15 +57,7 @@
                     "resolved": false
                 }
             ],
-            "issues": [
-                {
-                    "bug": "none",
-                    "description": "ssh connection failed for a repack. reran JYZIwWyHS1mMaBEs0yv8Gw",
-                    "future_threat": true,
-                    "resolved": true,
-                    "who": "jlund"
-                }
-            ]
+            "issues": []
         },
         {
             "aborted": true,
