fennec 58.0 - syncing wiki with current data

--- a/inflight/fennec/fennec-release-58.0.json
+++ b/inflight/fennec/fennec-release-58.0.json
@@ -5,7 +5,8 @@
             "aborted": false,
             "buildnum": 2,
             "graphids": [
-                "Bhn58VtAQuqrwc63y-JzJw"
+                "Bhn58VtAQuqrwc63y-JzJw",
+                "StOZxMjkR-6aFWVXh_9OHw"
             ],
             "human_tasks": [
                 {
