fennec 58.0 - updated inflight tasks. Resolved ('pushapk',)

--- a/inflight/fennec/fennec-release-58.0.json
+++ b/inflight/fennec/fennec-release-58.0.json
@@ -19,7 +19,7 @@
                     "alias": "pushapk",
                     "description": "run pushapk",
                     "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/fennec-temp-relpro.md#run-pushapk-manually",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "publish",
