fennec 58.0 - updated inflight tasks. Resolved ('publish',)

--- a/inflight/fennec/fennec-release-58.0.json
+++ b/inflight/fennec/fennec-release-58.0.json
@@ -25,7 +25,7 @@
                     "alias": "publish",
                     "description": "published release tasks",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": []
