firefox 58.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -81,7 +81,7 @@
                     "bug": "1432335",
                     "description": "Firefox 58 Release Uptake Monitoring failed, due to missing bz2 mar's",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 },
                 {
