--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -61,7 +61,7 @@
                     "alias": "",
                     "description": "Perform POA for Firefox Balrog rules, to make 'release' match 'release-cdntest'",
                     "docs": "https://gist.github.com/Callek/5a6bdbc1c4b82dc5ba8cd6644e14e79f",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "signoff",
