fennec 58.0 - updated inflight issue.

--- a/inflight/fennec/fennec-release-58.0.json
+++ b/inflight/fennec/fennec-release-58.0.json
@@ -28,7 +28,15 @@
                     "resolved": true
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1328719",
+                    "description": "[Bug 1328719's patch](https://bug1328719.bmoattachments.org/attachment.cgi?id=8944128) broke production pushapk because PyOpenSSL bump needed cryptography>=2.1.4.",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "callek"
+                }
+            ]
         },
         {
             "aborted": true,
