firefox 58.0rc - updated inflight tasks. Resolved ('11',)

--- a/inflight/firefox/firefox-release-rc-58.0rc.json
+++ b/inflight/firefox/firefox-release-rc-58.0rc.json
@@ -73,7 +73,7 @@
                     "alias": "",
                     "description": "Run BenScript 58.0 WNP config against 'release' channel.",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": [
