--- a/inflight/firefox/firefox-release-58.0.1.json
+++ b/inflight/firefox/firefox-release-58.0.1.json
@@ -4,13 +4,15 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                "QDnURs_iRz2gRw-WfCP_3w"
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
                     "description": "submit to Shipit",
                     "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Starting_a_Release#Submit_to_Ship_It",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "wnp",
