--- a/inflight/firefox/firefox-release-58.0.1.json
+++ b/inflight/firefox/firefox-release-58.0.1.json
@@ -18,7 +18,7 @@
                     "alias": "wnp",
                     "description": "setup whatsnew page",
                     "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Updates_through_Shipping#Set-up_whatsnew_page",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "mirrors",
