--- a/inflight/firefox/firefox-release-58.0.1.json
+++ b/inflight/firefox/firefox-release-58.0.1.json
@@ -39,7 +39,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1432335",
+                    "description": "Firefox 58 Release Uptake Monitoring failed, due to missing bz2 mars",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "sfraser"
+                }
+            ]
         }
     ],
     "preflight": {
