firefox 58.0.1 - syncing wiki with current data

--- a/inflight/firefox/firefox-release-58.0.1.json
+++ b/inflight/firefox/firefox-release-58.0.1.json
@@ -5,7 +5,8 @@
             "aborted": false,
             "buildnum": 1,
             "graphids": [
-                "QDnURs_iRz2gRw-WfCP_3w"
+                "QDnURs_iRz2gRw-WfCP_3w",
+                "AtQ39aLrRPae7xT5-RjPPA"
             ],
             "human_tasks": [
                 {
