fennec 58.0.1 - syncing wiki with current data

--- a/inflight/fennec/fennec-release-58.0.1.json
+++ b/inflight/fennec/fennec-release-58.0.1.json
@@ -5,7 +5,8 @@
             "aborted": false,
             "buildnum": 1,
             "graphids": [
-                "PpXWP5wAT_SwJGEeFQi52Q"
+                "PpXWP5wAT_SwJGEeFQi52Q",
+                "c2l3yJiWQfKG6zyAE6AQ5g"
             ],
             "human_tasks": [
                 {
