fennec 58.0.1 - updated inflight issue. Resolved ('1',)

--- a/inflight/fennec/fennec-release-58.0.1.json
+++ b/inflight/fennec/fennec-release-58.0.1.json
@@ -27,7 +27,7 @@
                     "bug": "none",
                     "description": "why is there a push apk breakpoint task in fennec push and ship graphs",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 },
                 {
