--- a/inflight/fennec/fennec-release-58.0.1.json
+++ b/inflight/fennec/fennec-release-58.0.1.json
@@ -34,7 +34,7 @@
                     "bug": "none",
                     "description": "why does fennec release use publish_fennec instead of push_fennec for ACTION_FLAVOR",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 },
                 {
