fennec 58.0.1 - updated inflight issue. Resolved ('3',)

--- a/inflight/fennec/fennec-release-58.0.1.json
+++ b/inflight/fennec/fennec-release-58.0.1.json
@@ -41,7 +41,7 @@
                     "bug": "none",
                     "description": "why are source-test-mozlint-eslint and source-test-mozlint-test-manifest running as part of publish_fennec",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 },
                 {
