fennec 58.0.1 - updated inflight issue. Resolved ('4',)

--- a/inflight/fennec/fennec-release-58.0.1.json
+++ b/inflight/fennec/fennec-release-58.0.1.json
@@ -48,7 +48,7 @@
                     "bug": "none",
                     "description": "release notes pointed at wrong push instructions",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 }
             ]
