--- a/inflight/firefox/firefox-release-58.0.2.json
+++ b/inflight/firefox/firefox-release-58.0.2.json
@@ -44,7 +44,7 @@
                     "bug": "none",
                     "description": "needed to rerun l10n task that timed out. This should be auto retried by tc or the script. task: WOGc2qYcRqCHHX7P2q3QLw",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlund"
                 }
             ]
