--- a/inflight/firefox/firefox-release-58.0.2.json
+++ b/inflight/firefox/firefox-release-58.0.2.json
@@ -36,7 +36,7 @@
                     "alias": "",
                     "description": "manaully schedule an update for the two release wnp rules similar to release-cdntest: rules 733 and 677. Sign off on these as well as automation scheduled changes when ready to signoff",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "signoff",
