--- a/inflight/fennec/fennec-release-58.0.2.json
+++ b/inflight/fennec/fennec-release-58.0.2.json
@@ -18,7 +18,7 @@
                     "alias": "pushapk",
                     "description": "run pushapk (temp in-tree relpro)",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/old-how-tos/fennec-temp-relpro.md#kick-off-publish-action-task",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": []
