fennec 58.0.2 - syncing wiki with current data

--- a/inflight/fennec/fennec-release-58.0.2.json
+++ b/inflight/fennec/fennec-release-58.0.2.json
@@ -5,7 +5,8 @@
             "aborted": false,
             "buildnum": 1,
             "graphids": [
-                "TgCGVMmKSSaX3ETWGdms7w"
+                "TgCGVMmKSSaX3ETWGdms7w",
+                "KgYNsuioTg6nba0_GOOIAA"
             ],
             "human_tasks": [
                 {
