--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -54,7 +54,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1443335",
+                    "description": "release-snap builder failed because it couldn't find credentials",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "bhearsum"
+                }
+            ]
         }
     ],
     "preflight": {
