firefox 59.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "S3Ygsrn8QfuFvBXK5nAXlw"
+                ],
+                [
+                    "ship_rc",
+                    "F15arWGbTqCE_90xxLOkdw"
                 ]
             ],
             "human_tasks": [
