firefox 59.0rc - updated inflight issue. Resolved ('2',)

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -70,8 +70,8 @@
                 {
                     "bug": "none",
                     "description": "missing secrets:get:project/releng/snapcraft/firefox/candidate scope",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 }
             ]
