firefox 59.0rc - syncing wiki with current data

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -4,12 +4,7 @@
         {
             "aborted": false,
             "buildnum": 4,
-            "graphids": [
-                [
-                    "promote_rc",
-                    "SjeNNvPdStWuuvjJp4PUBA"
-                ]
-            ],
+            "graphids": [],
             "human_tasks": [
                 {
                     "alias": "shipit",
