firefox 59.0rc - added promote_rc graphid.

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 4,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote_rc",
+                    "N8hCeDl0Qty2PM3ukpcmmw"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
