firefox 59.0rc - syncing wiki with current data

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -56,7 +56,7 @@
             ],
             "issues": [
                 {
-                    "bug": "none",
+                    "bug": "issue",
                     "description": "snap failed with KeyError: '\"status\"'",
                     "future_threat": true,
                     "resolved": false,
