--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -39,7 +39,7 @@
                     "alias": "wnp",
                     "description": "setup whatsnew page",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto-rc.md",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "mirrors",
