firefox 59.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "N8hCeDl0Qty2PM3ukpcmmw"
+                ],
+                [
+                    "ship_rc",
+                    "d6LwEWeNSHKIp5sT5HbMVA"
                 ]
             ],
             "human_tasks": [
