--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -31,7 +31,7 @@
                     "alias": "ship-rc",
                     "description": "publish in Balrog on beta channel",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/desktop/howto-rc.md#ship-rc",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "betasignoff",
