--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "clifvnJKS6i8xMexCIAiIQ"
+                ],
+                [
+                    "ship_rc",
+                    "AeKtuisDRPqNCL2npr5FwA"
                 ]
             ],
             "human_tasks": [
