--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -45,8 +45,8 @@
                 {
                     "bug": "none",
                     "description": "ship fennec rc action task failed with scope issues on project:releng:googleplay:release",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 }
             ]
