fennec 59.0rc - updated inflight issue.

--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -48,6 +48,13 @@
                     "future_threat": false,
                     "resolved": true,
                     "who": "bhearsum"
+                },
+                {
+                    "bug": "1444391",
+                    "description": "accidentally changed org.mozilla.firefox description to \"Firefox for Android Beta\"",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "bhearsum"
                 }
             ]
         }
