fennec 59.0rc - updated inflight issue. Resolved ('3',)

--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -53,7 +53,7 @@
                     "bug": "1444391",
                     "description": "accidentally changed org.mozilla.firefox description to \"Firefox for Android Beta\"",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "bhearsum"
                 }
             ]
