--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -3,6 +3,32 @@
     "inflight": [
         {
             "aborted": false,
+            "buildnum": 3,
+            "graphids": [],
+            "human_tasks": [
+                {
+                    "alias": "shipit",
+                    "description": "submit to Shipit",
+                    "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Starting_a_Release#Submit_to_Ship_It",
+                    "resolved": true
+                },
+                {
+                    "alias": "ship-rc",
+                    "description": "run ship-rc",
+                    "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/mobile/howto-rc.md#ship-rc",
+                    "resolved": false
+                },
+                {
+                    "alias": "ship",
+                    "description": "mark the release as shipped",
+                    "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/mobile/howto-rc.md#ship",
+                    "resolved": false
+                }
+            ],
+            "issues": []
+        },
+        {
+            "aborted": true,
             "buildnum": 2,
             "graphids": [
                 [
