--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 3,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "Jp2wmtf8R8K1c_BAAL-vkw"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
