--- a/inflight/firefox/firefox-release-rc-59.0rc.json
+++ b/inflight/firefox/firefox-release-rc-59.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "X-UA6oNqSfCCX25A-LDr-A"
+                ],
+                [
+                    "ship_rc",
+                    "WXtFK0QoSO-qnHY2vcE0Fg"
                 ]
             ],
             "human_tasks": [
