fennec 59.0rc - added ship_rc graphid.

--- a/inflight/fennec/fennec-release-rc-59.0rc.json
+++ b/inflight/fennec/fennec-release-rc-59.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "Jp2wmtf8R8K1c_BAAL-vkw"
+                ],
+                [
+                    "ship_rc",
+                    "TfKFXCykQTuPkyAarmpNTw"
                 ]
             ],
             "human_tasks": [
